--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -15,13 +15,17 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="ru.alexdev.cards.MainActivity"
-            android:label="@string/app_name" 
-            android:screenOrientation="landscape" > 
+            android:label="@string/app_name"
+            android:screenOrientation="landscape" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="ru.alexdev.cards.GameGuessActivity"
+            android:label="@string/title_activity_game_guess" >
         </activity>
     </application>
 
