--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -27,6 +27,7 @@
             android:name="ru.alexdev.cards.GameGuessActivity"
             android:label="@string/title_activity_game_guess" >
         </activity>
+        <activity android:name="ResultsActivity"></activity>
     </application>
 
 </manifest>
